--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -68,7 +68,7 @@
                             <div class="card h-100">
                                 <a href="#">
                                     <img class="card-img-top"
-                                         src="/static/vendor/img/products/{{ product.img }}"
+                                         src="{% static product.img %}"
                                          alt="">
                                 </a>
                                 <div class="card-body">
