--- a/mainapp/templates/mainapp/category.html
+++ b/mainapp/templates/mainapp/category.html
@@ -21,7 +21,8 @@
                 <h1 class="my-4">GeekShop</h1>
                 <div class="list-group">
                     {% for category in categories %}
-                        <a href="{% url 'products:category' category.pk %}" class="list-group-item">{{ category }}</a>
+                        <a href="{% url 'products:category' category.pk %}"
+                           class="list-group-item">{{ category }}</a>
                     {% endfor %}
                 </div>
 
