--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -64,14 +64,15 @@
                     {% for product in products %}
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
-                                <a href="#">
+                                <a href="{% url 'products:product' product.pk %}">
                                     <img class="card-img-top"
                                          src="/media/{{ product.image }}"
                                          alt="">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="#">{{ product.name|capfirst }}</a>
+                                        <a href="{% url 'products:product' product.pk %}">{{ product.name|capfirst }}
+                                        </a>
                                     </h4>
                                     <h5>{{ product.price }} руб.</h5>
                                     <p class="card-text">{{ product.description|capfirst }} .</p>
