--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -7,17 +7,15 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-5">
-                            <div class="alert alert-warning alert-dismissible fade show" role="alert"
-                                 style="margin-top: 50px;">
-                                {% if form.errors %}
+                            {% if form.errors|escape %}
+                                <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                                     style="margin-top: 50px;">
                                     <strong>{{ form.errors }}</strong>
-                                {% else %}
-                                    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-                                {% endif %}
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            {% endif %}
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Авторизация</h3>
                                 </div>
