--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -78,8 +78,10 @@
                                     <p class="card-text">{{ product.description|capfirst }} .</p>
                                 </div>
                                 <div class="card-footer text-center">
-                                    <button type="button" class="btn btn-outline-success">Отправить в корзину
-                                    </button>
+                                    <a href="{% url 'baskets:basket_add'  product.pk %}">
+                                        <button type="button" class="btn btn-outline-success">Отправить в корзину
+                                        </button>
+                                    </a>
                                 </div>
 
                             </div>
