--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -7,10 +7,18 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-5">
-                            {% if form.errors|escape %}
-                                <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                            {% if messages or form.non_field_errors %}
+                                <div class="alert {% if messages %}alert-success{% else %} alert-warning{% endif %}
+                                alert-dismissible fade show"
+                                     role="alert"
                                      style="margin-top: 50px;">
-                                    <strong>{{ form.errors }}</strong>
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            {{ message }}
+                                        {% endfor %}
+                                    {% else %}
+                                        {{ form.non_field_errors }}
+                                    {% endif %}
                                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
