--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -21,7 +21,7 @@
                 <h1 class="my-4">GeekShop</h1>
                 <div class="list-group">
                     {% for category in categories %}
-                        <a href="{% url 'products:category' category.pk %}" class="list-group-item">{{ category }}</a>
+                        <a href="{% url 'mainapp:product' category.pk %}" class="list-group-item">{{ category }}</a>
                     {% endfor %}
                 </div>
 
@@ -71,7 +71,8 @@
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">
-                                        <a href="{% url 'products:product' product.pk %}">{{ product.name|capfirst }}
+                                        <a href="{% url 'products:product' product.category.pk %}">
+                                            {{ product.name|capfirst }}
                                         </a>
                                     </h4>
                                     <h5>{{ product.price }} руб.</h5>
@@ -90,17 +91,27 @@
                 </div>
 
                 <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
-                        </li>
-                    </ul>
+                    {% if products|length >= 1 and products.paginator.count > 1 %}
+                        <ul class="pagination justify-content-center">
+                            {% if products|length > 1 %}
+                            {% endif %}
+                            <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+                                <a class="page-link"
+                                   href="{% if products.has_previous %} {% url 'products:page' products.previous_page_number %}{% endif %}"
+                                   tabindex="-1" aria-disabled="true">Previous</a>
+                            </li>
+                            {% for page in products.paginator.page_range %}
+                                <li class="page-item">
+                                    <a class="page-link" href="{% url 'products:page' page %}">{{ page }}</a>
+                                </li>
+                            {% endfor %}
+                            <li class="page-item {% if not products.has_next %} disabled {% endif %}">
+                                <a class="page-link"
+                                   href="{% if products.has_next %} {% url 'products:page' products.next_page_number %}{% endif %}">Next</a>
+                            </li>
+                        </ul>
+                    {% endif %}
+
                 </nav>
 
             </div>
