--- a/adminapp/templates/adminapp/admin-users-update-delete.html
+++ b/adminapp/templates/adminapp/admin-users-update-delete.html
@@ -1,7 +1,7 @@
 {% extends 'adminapp/base.html' %}
 
 {% block content %}
-    <h1 class="mt-4">Редактирование пользователя | {{ current_user.username }}</h1>
+    <h1 class="mt-4">Редактирование пользователя | {{ title }} | {{ current_user.username }}</h1>
     <div class="card-body">
         <form action="{% url 'admins:admin_users_update' current_user.id %}" method="post"
               enctype="multipart/form-data">
@@ -58,9 +58,10 @@
         </form>
         <div class="row">
             <div class="col-lg-12" style="margin-top: 33px;">
-                <a href="{% url 'admins:admin_users_delete' current_user.id %}">
-                    <button class="btn btn-danger btn-block">Удалить</button>
-                </a>
+                <form action="{% url 'admins:admin_users_delete' current_user.pk %}" method="post">
+                    {% csrf_token %}
+                    <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                </form>
             </div>
         </div>
     </div>
