--- a/adminapp/templates/adminapp/admin-products-update-delete.html
+++ b/adminapp/templates/adminapp/admin-products-update-delete.html
@@ -60,9 +60,10 @@
         </form>
         <div class="row">
             <div class="col-lg-12" style="margin-top: 33px;">
-                <a href="{% url 'admins:admin_products_delete' current_product.pk %}">
-                    <button class="btn btn-danger btn-block">Удалить</button>
-                </a>
+                <form action="{% url 'admins:admin_products_delete' current_product.pk %}" method="post">
+                    {% csrf_token %}
+                    <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                </form>
             </div>
         </div>
     </div>
