added context processor for showing total sum of user basket on all pages

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -48,6 +48,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'auth:profile' %}">{{ user_basket.0.total_sum }}
+                            <i class="fas fa-shopping-basket"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'auth:logout' %}">Выйти <i class="fas fa-sign-out-alt"></i></a>
                     </li>
                     {% if user.is_superuser or user.is_stuff %}
