--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -63,6 +63,10 @@
                             <label class="small mb-1" for="{{ form.city.id_for_label }}">Город</label>
                             {{ form.city }}
                         </div>
+                        <div class="form-row">
+                            {% comment %} {{ profile_form.as_p }} {% endcomment %}
+                            {{ profile_form }}
+                        </div>
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
