--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -92,13 +92,13 @@
 
                 <nav aria-label="Page navigation example">
 {#                    {% if products|length >= 1 and products.paginator.count > 1 %}#}
-                    {% if products|length >= 1 %}
+                    {% if products|length >= 1 and page_obj.paginator.count > 1 %}
                         <ul class="pagination justify-content-center">
                             {% if products|length > 1 %}
                             {% endif %}
-                            <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+                            <li class="page-item {% if not page_obj.has_previous %} disabled {% endif %}">
                                 <a class="page-link"
-                                   href="{% if products.has_previous %} {% url 'products:page' products.previous_page_number %}{% endif %}"
+                                   href="{% if page_obj.has_previous %} {% url 'products:page' page_obj.previous_page_number %}{% endif %}"
                                    tabindex="-1" aria-disabled="true">Previous</a>
                             </li>
                             {% for page in page_obj.paginator.page_range %}
@@ -106,9 +106,9 @@
                                     <a class="page-link" href="{% url 'products:page' page %}">{{ page }}</a>
                                 </li>
                             {% endfor %}
-                            <li class="page-item {% if not products.has_next %} disabled {% endif %}">
+                            <li class="page-item {% if not page_obj.has_next %} disabled {% endif %}">
                                 <a class="page-link"
-                                   href="{% if products.has_next %} {% url 'products:page' products.next_page_number %}{% endif %}">Next</a>
+                                   href="{% if page_obj.has_next %} {% url 'products:page' page_obj.next_page_number %}{% endif %}">Next</a>
                             </li>
                         </ul>
                     {% endif %}
