--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -51,8 +51,9 @@
                             <a class="dropdown-item" href="{% url 'auth:profile' %}">Профайл <i
                                     class="fas fa-user-circle"></i></a>
                             <a class="dropdown-item"
-                               href="{% url 'auth:profile' %}">Корзина: {{ user_basket.0.total_sum }} <i
-                                    class="fas fa-shopping-basket"></i></a>
+                               href="{% url 'auth:profile' %}">Корзина: {{ user_basket.0.total_sum }}р. {{ user_basket_counter }}
+                                ед. <i
+                                        class="fas fa-shopping-basket"></i></a>
                             <a class="dropdown-item" href="{% url 'auth:logout' %}">Выйти <i
                                     class="fas fa-sign-out-alt"></i></a>
                             <a class="dropdown-item" href="{% url 'ordersapp:orders_list' %}">Заказы <i
