--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -51,8 +51,11 @@
                             <a class="dropdown-item" href="{% url 'auth:profile' %}">Профайл <i
                                     class="fas fa-user-circle"></i></a>
                             <a class="dropdown-item"
-                               href="{% url 'auth:profile' %}">Корзина: {{ user_basket.0.total_sum }}р. {{ user_basket_counter }}
-                                ед. <i
+                               href="{% url 'auth:profile' %}">Корзина: {% if user_basket_counter %}
+                                {{ user_basket.0.total_sum }}р. {{ user_basket_counter }}  ед.
+                            {% else %} нет товаров
+                            {% endif %}
+                                <i
                                         class="fas fa-shopping-basket"></i></a>
                             <a class="dropdown-item" href="{% url 'auth:logout' %}">Выйти <i
                                     class="fas fa-sign-out-alt"></i></a>
