--- a/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -18,13 +18,25 @@
 {% else %}
     <div class="h2">Новый заказ</div>
     <hr>
-    <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }} </div>
+    <div class="h4">заказчик:
+        {% if user.last_name and user.first_name %}
+            {{ user.last_name }} {{ user.first_name }}
+        {% else %}
+            {{ user.username }}
+        {% endif %}
+    </div>
     {% if basket.0 %}
+        {#        <div class="h4">#}
+        {#            общее количество товаров: <span class="order_total_quantity">{{ basket.0.get_total_quantity }}</span>#}
+        {#        </div>#}
         <div class="h4">
-            общее количество товаров: <span class="order_total_quantity">{{ basket.0.get_total_quantity }}</span>
+            общее количество товаров: <span class="order_total_quantity"></span>
         </div>
+        {#        <div class="h3">#}
+        {#            общая стоимость: <span class="order_total_cost">{{ basket.0.get_total_cost }}</span> руб#}
+        {#        </div>        #}
         <div class="h3">
-            общая стоимость: <span class="order_total_cost">{{ basket.0.get_total_cost }}</span> руб
+            общая стоимость: <span class="order_total_cost"></span> руб
         </div>
     {% endif %}
 {% endif %}
