added ajax and new styles for orders

--- a/ordersapp/templates/ordersapp/includes/inc_order_actions.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_actions.html
@@ -14,5 +14,5 @@
     </a>
 </button>
 <button class="btn btn-success" >
-    <a href="{% url 'mainapp:index' %}" style="color: white">на главную</a>
+    <a href="{% url 'products:index' %}" style="color: white">на главную</a>
 </button>
