--- a/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -1,43 +1,28 @@
 {% if object %}
-    <div class="card" style="width: 18rem;">
-        <div class="card-header">
-            Заказ №{{ object.pk }} от {{ object.created|date:"Y-m-d H:i:s" }}
+    <div class="h2">Заказ №{{ object.pk }} от {{ object.created|date:"Y-m-d H:i:s" }}</div>
+    <hr>
+    <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }} </div>
+    <div class="h4">обновлен: {{ object.updated|date:"Y-m-d H:i:s" }}</div>
+    <div class="h4">cтатус: {{ object.get_status_display }}</div>
+    <hr>
+    {% with object_summary=object.get_summary %}
+        <div class="h4">
+            общее количество товаров: <span class="order_total_quantity">{{ object_summary.total_quantity }}</span>
         </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">заказчик: {{ user.last_name }} {{ user.first_name }} </li>
-            <li class="list-group-item">обновлен: {{ object.updated|date:"Y-m-d H:i:s" }}</li>
-            <li class="list-group-item">cтатус: {{ object.get_status_display }}</li>
-            <li class="list-group-item">общее количество товаров: <span
-                    class="order_total_quantity">{{ object.get_total_quantity }}</span></li>
-            <li class="list-group-item">общая стоимость: <span
-                    class="order_total_cost">{{ object.get_total_cost }}</span> руб
-            </li>
-        </ul>
-    </div>
-
+        <div class="h3">
+            общая стоимость: <span class="order_total_cost">{{ object_summary.total_cost }}</span> руб
+        </div>
+    {% endwith %}
 {% else %}
     <div class="h2">Новый заказ</div>
     <hr>
-    <div class="h4">заказчик:
-        {% if user.last_name and user.first_name %}
-            {{ user.last_name }} {{ user.first_name }}
-        {% else %}
-            {{ user.username }}
-        {% endif %}
+    <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }} </div>
+    <hr>
+    <div class="h4">
+        общее количество товаров: <span class="order_total_quantity"></span>
     </div>
-    {% if basket.0 %}
-        {#        <div class="h4">#}
-        {#            общее количество товаров: <span class="order_total_quantity">{{ basket.0.get_total_quantity }}</span>#}
-        {#        </div>#}
-        <div class="h4">
-            общее количество товаров: <span class="order_total_quantity"></span>
-        </div>
-        {#        <div class="h3">#}
-        {#            общая стоимость: <span class="order_total_cost">{{ basket.0.get_total_cost }}</span> руб#}
-        {#        </div>        #}
-        <div class="h3">
-            общая стоимость: <span class="order_total_cost"></span> руб
-        </div>
-    {% endif %}
+    <div class="h3">
+        общая стоимость: <span class="order_total_cost"></span> руб
+    </div>
 {% endif %}
 <hr>
