--- a/ordersapp/templates/ordersapp/order_detail.html
+++ b/ordersapp/templates/ordersapp/order_detail.html
@@ -1,27 +1,28 @@
-{% extends "ordersapp/base.html" %}
+{% extends "ordersapp/order_base.html" %}
 {% load staticfiles %}
 
 {% block content %}
-    {% include 'ordersapp/includes/inc_order_summary.html' %}
-    <div class="basket_list">
-        {% for item in object.orderitems.select_related %}
-            <div class="basket_record">
+    <div class="container my-4">
+        {% include 'ordersapp/includes/inc_order_summary.html' %}
+        <div class="basket_list">
+            {% for item in object.orderitems.select_related %}
+                <div class="basket_record">
                <span class="category_name">
                    {{ item.product.category.name }}
                </span>
-                <span class="product_name">{{ item.product.name }}</span>
-                <span class="product_price">
+                    <span class="product_name">{{ item.product.name }}</span>
+                    <span class="product_price">
                    {{ item.product.price }}&nbspруб
                </span>
-                <span class="product_quantitiy">
+                    <span class="product_quantitiy">
                    x {{ item.quantity }} шт.
                </span>
-                <span class="product_cost">
+                    <span class="product_cost">
                     = {{ item.get_product_cost }}&nbspруб
                </span>
-            </div>
-        {% endfor %}
+                </div>
+            {% endfor %}
+        </div>
+        {% include 'ordersapp/includes/inc_order_actions.html' %}
     </div>
-    {% include 'ordersapp/includes/inc_order_actions.html' %}
-
 {% endblock %}
