fixed inclusion custom ajax to base template

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -95,7 +95,7 @@
 
 <!-- FontAwesome script -->
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
-{% block scripts %}{% endblock %}
+{% block js %}{% endblock %}
 
 </body>
 
