--- a/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -1,7 +1,12 @@
 {% if object %}
     <div class="h2">Заказ №{{ object.pk }} от {{ object.created|date:"Y-m-d H:i:s" }}</div>
     <hr>
-    <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }} </div>
+    <div class="h4">заказчик:
+        {% if user.last_name and user.first_name %}
+            {{ user.last_name }} {{ user.first_name }}
+        {% else %}
+            {{ user.username }}
+        {% endif %} </div>
     <div class="h4">обновлен: {{ object.updated|date:"Y-m-d H:i:s" }}</div>
     <div class="h4">cтатус: {{ object.get_status_display }}</div>
     <hr>
@@ -16,7 +21,12 @@
 {% else %}
     <div class="h2">Новый заказ</div>
     <hr>
-    <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }} </div>
+    <div class="h4">заказчик:
+        {% if user.last_name and user.first_name %}
+            {{ user.last_name }} {{ user.first_name }}
+        {% else %}
+            {{ user.username }}
+        {% endif %} </div>
     <hr>
     <div class="h4">
         общее количество товаров: <span class="order_total_quantity"></span>
