fixed header overlap

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 </nav>
-
+<div style="height: 100px"></div>
 {% block content %}{% endblock %}
 
 {% block footer %}{% endblock %}
