--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -1,7 +1,8 @@
 <div class="basket_list">
     {% if baskets %}
         <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-            Корзина <span class="badge badge-secondary badge-pill">{{ baskets.total_quantity }}</span>
+{#            Корзина <span class="badge badge-secondary badge-pill">{{ baskets.total_quantity }}</span>#}
+            Корзина <span class="badge badge-secondary badge-pill">{{ baskets.0.total_quantity }}</span>
         </h4>
         {% for basket in baskets %}
             <div class="card mb-3">
@@ -25,11 +26,11 @@
                                 </form>
                             </div>
 
-{#                            <div class="col-lg-4">#}
-{#                                <a href="{% url 'baskets:basket_remove' basket.pk %}">#}
-{#                                    <i class="fas fa-trash"></i>#}
-{#                                </a>#}
-{#                            </div>#}
+                            {#                            <div class="col-lg-4">#}
+                            {#                                <a href="{% url 'baskets:basket_remove' basket.pk %}">#}
+                            {#                                    <i class="fas fa-trash"></i>#}
+                            {#                                </a>#}
+                            {#                            </div>#}
                         </div>
                     </li>
                 </ul>
@@ -38,11 +39,13 @@
         <div class="card mb-3">
             <div class="card-footer">
                 <p class="float-left">Всего товаров в корзине</p>
-                <h4 class="float-right"> {{ baskets.total_quantity }} шт.</h4>
+                <h4 class="float-right"> {{ baskets.0.total_quantity }} шт.</h4>
+                {#                <h4 class="float-right"> {{ baskets.total_quantity }} шт.</h4>#}
             </div>
             <div class="card-footer">
                 <p class="float-left">Итого</p>
-                <h4 class="float-right"> {{ baskets.total_sum }} руб.</h4>
+{#                <h4 class="float-right"> {{ baskets.total_sum }} руб.</h4>#}
+                <h4 class="float-right"> {{ baskets.0.total_sum }} руб.</h4>
             </div>
         </div>
         <button type="button" class="btn btn-success btn-lg float-right">Оформить</button>
