created opportunity to create/delete/update category through custom admin panel

--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -52,9 +52,9 @@
                         </div>
                         Пользователи
                     </a>
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="{% url 'admins:admin_categories_read' %}">
                         <div class="sb-nav-link-icon">
-                            <i class="fas fa-shopping-basket"></i>
+                            <i class="fas fa-tshirt"></i>
                         </div>
                         Категории
                     </a>
